Expanded on motivation for using `gsub` to strip extra information on column names

--- a/novice/capstones/deseq_capstone/analysis.Rmd
+++ b/novice/capstones/deseq_capstone/analysis.Rmd
@@ -50,7 +50,7 @@ paste0("ctl", 1:3)
 c(paste0("ctl", 1:4), paste0("uvb", 1:5))
 ```
 
-Using `gsub` is a more reproducible way to do this.
+An easier way to do this, especially for files with many columns, is to use the `gsub` command to strip out the extra information. This is also more robust to introduced errors, for example if the column order changes at some point in the future.
 ```{r rename_cols}
 ## Using gsub -- reproducible
 ?gsub
