--- a/novice/capstones/deseq_capstone/analysis.Rmd
+++ b/novice/capstones/deseq_capstone/analysis.Rmd
@@ -64,8 +64,8 @@ Find the gene with the highest expression in any sample. Extract  the expression
 
 ```{r exercise_1}
 max(apply(countdata, 1, max)) #max expression is 7013
-which.max(apply(countdata, 1, max)) #gene is EEF1A1P9
-countdata[13514, ] #get other sample data - max is in uvb1
+top.gene <- which.max(apply(countdata, 1, max)) #gene is EEF1A1P9
+countdata[top.gene, ] #get other sample data - max is in uvb1
 
 #this is a pseudogene - maybe an artefact of only aligning reads to a single chromosome?
 ```
