Added required call to "dir.create" so that the Rmd file can be knit'd (how do I verb knitr?)

--- a/novice/capstones/deseq_capstone/analysis.Rmd
+++ b/novice/capstones/deseq_capstone/analysis.Rmd
@@ -217,6 +217,7 @@ names(resdata)[1] <- "GeneID"
 head(resdata)
 
 sig <- subset(resdata, padj<0.05)
+dir.create("results")
 write.table(sig, file="results/sig.txt", sep="\t") #tab delim data
 ```
 
