--- a/novice/capstones/deseq_capstone/analysis.Rmd
+++ b/novice/capstones/deseq_capstone/analysis.Rmd
@@ -7,7 +7,7 @@ output:
 
 This is an introduction to RNAseq analysis for use at Software Carpentry bootcamps that have covered novice R. It involves reading in some count data from an RNAseq experiment, exploring the data using base R functions and then analysis with the package DESeq2.
 
-## Install required CRAN packages
+# Install required CRAN packages
 
 First, install some packages that you'll use.
 
@@ -20,9 +20,9 @@ install.packages("calibrate")
 Import the data as a `data.frame` and examine it. The data is stored in a text file with the first line being a header giving the column names, and the row names in the first column. 
 
 ```{r data_input}
-## Filename with output from featureCounts
+# Filename with output from featureCounts
 countFile <- "data/counts.txt"
-## Read in the data
+# Read in the data
 countData <- read.table(countFile, header=TRUE, row.names=1)
 head(countData)
 colnames(countData)
@@ -39,9 +39,9 @@ colnames(countData)
 
 We can rename the columns to something a bit more readable.
 ```{r eval=FALSE}
-## Manually
+# Manually
 c("ctl1", "ctl2", "ctl3", "uvb1", "uvb2", "uvb3")
-## Using paste
+# Using paste
 ?paste
 paste("ctl", 1:3)
 paste("ctl", 1:3, sep="")
@@ -52,25 +52,25 @@ c(paste0("ctl", 1:4), paste0("uvb", 1:5))
 
 An easier way to do this, especially for files with many columns, is to use the `gsub` command to strip out the extra information. This is also more robust to introduced errors, for example if the column order changes at some point in the future.
 ```{r rename_cols}
-## Using gsub -- reproducible
+# Using gsub -- reproducible
 ?gsub
 gsub(pattern=".fastq_tophat.accepted_hits.bam", replacement="", x=colnames(countData))
 colnames(countData) <- gsub(pattern=".fastq_tophat.accepted_hits.bam", replacement="", x=colnames(countData))
 head(countData)
 ```
 
-### Exercise 1
+## Exercise 1
 Find the gene with the highest expression in any sample. Extract  the expression data for this gene for all samples. In which sample does it have the highest expression? What is the function of the gene? Can you suggest why this is the top expressed gene?
 
 ```{r exercise_1}
-max(apply(countData, 1, max)) #max expression is 7013
-topGene <- which.max(apply(countData, 1, max)) #gene is EEF1A1P9
-countData[topGene, ] #get other sample data - max is in uvb1
+max(apply(countData, 1, max)) # max expression is 7013
+topGene <- which.max(apply(countData, 1, max)) # gene is EEF1A1P9
+countData[topGene, ] # get other sample data - max is in uvb1
 
-#this is a pseudogene - maybe an artefact of only aligning reads to a single chromosome?
+# this is a pseudogene - maybe an artefact of only aligning reads to a single chromosome?
 ```
 
-## Data investigation using base R
+# Data investigation using base R
 
 We can investigate this data a bit more using some of the basic R functions before going on to use more sophisticated analysis tools.
 
@@ -79,7 +79,7 @@ We will calculate the mean for each gene for each condition. First make a copy o
 ```{r get_means}
 countData2 <- countData
 
-#get Control columns
+# get Control columns
 colnames(countData2)
 grep("ctl", colnames(countData2))
 ctlCols <- grep("ctl", colnames(countData2))
@@ -88,7 +88,7 @@ apply(countData2[, ctlCols], 1, mean)
 # here we'll use rowMeans instead, its a convenient shortcut, and also faster!
 countData2$ctlMean <- rowMeans(countData2[, ctlCols])
 
-#same for uvb
+# same for uvb
 uvbCols <- grep("uvb", colnames(countData2))
 countData2$uvbMean <- rowMeans(countData2[, uvbCols])
 ```
@@ -104,7 +104,7 @@ library(ggplot2)
 ggplot(countData2, aes(x=ctlMean, y=uvbMean)) + geom_point()
 ```
 
-### Exercise 2
+## Exercise 2
 How could you make this plot more informative and look more professional? Hint: try using a log scale. Try changing colours, transparencies, sizes, or shapes of points. 
 
 `help(par)` will give you information on lots of graphical parameters that can be set. Help for ggplot2 can be found [here](http://docs.ggplot2.org/current/).
@@ -118,7 +118,7 @@ ggplot(countData2, aes(x=ctlMean, y=uvbMean)) + geom_point() + scale_x_log10() +
 ```
 There are lots more options you can use to alter the appearance of these plots.
 
-##Find candidate differentially expressed genes
+#Find candidate differentially expressed genes
 
 We can find candidate differentially expressed genes by looking for genes with a large change between control and UVB samples. A common threshold used is log2 fold change more than 2 fold. We will calculate log2 fold change for all the genes and colour the genes with log2 fold change more than 2 fold on the plot.
 
@@ -133,7 +133,7 @@ sum(countData2$uvbMean > 0)
 
 nrow(countData2)
 countData2 <- subset(countData2, (countData2$ctlMean > 0 | countData2$uvbMean > 0))
-#explain | operator meaning OR in this context?
+# explain: | operator meaning OR in this context?
 nrow(countData2)
 ```
 
@@ -162,13 +162,13 @@ points(countData2$ctlMean[countData2$outlier==TRUE], countData2$uvbMean[countDat
 ggplot(countData2, aes(x=ctlMean, y=uvbMean, colour=outlier)) + geom_point() + scale_x_log10() + scale_y_log10() 
 ```
 
-## DESeq2 analysis
+# DESeq2 analysis
 
 DESeq2 is an R package for analysis of RNAseq data. It is available from [Bioconductor](http://www.bioconductor.org/). Bioconductor is a project to provide tools for analysing high-throughput genomic data including RNA-seq, ChIP-seq and arrays. You can explore Bioconductor packages [here](http://www.bioconductor.org/packages/release/BiocViews.html#___Software). 
 
 ```{r install_deseq2, eval=FALSE}
-#install and have a break to check everyone is up to date?
-#explain bioconductor?
+# install and have a break to check everyone is up to date?
+# explain bioconductor?
 source("http://bioconductor.org/biocLite.R")
 biocLite("DESeq2")
 ```
@@ -189,14 +189,14 @@ class(countData)
 head(countData)
 
 # construct colData dataframe
-#three replicates of control and UVB.
+# three replicates of control and UVB.
 colData <- data.frame(condition=c(rep("ctl", 3), rep("uvb",3)), row.names=colnames(countData))
 ```
 
 DESeq works on a particular type of object called a DESeqDataSet.
 
 ```{r make_deseqdataset}
-#introduce how DESeq2 works - type of object it works on etc
+# introduce how DESeq2 works - type of object it works on etc
 # instantiate the DESeqDataSet
 dds <- DESeqDataSetFromMatrix(countData=countData, colData=colData, design=~condition)
 dds
@@ -212,7 +212,7 @@ dds <- DESeq(dds)
 res <- results(dds)
 head(res)
 table(res$padj<0.05)
-## Order by adjusted p-value
+# Order by adjusted p-value
 res <- res[order(res$padj), ]
 head(res)
 ```
@@ -227,10 +227,10 @@ head(resData)
 
 sig <- subset(resData, padj<0.05)
 dir.create("results")
-write.table(sig, file="results/sig.txt", sep="\t") #tab delim data
+write.table(sig, file="results/sig.txt", sep="\t") # tab delim data
 ```
 
-## Data Visualization
+# Data Visualization
 
 We can also do some exploratory plotting of the data.
 
@@ -239,7 +239,7 @@ plotDispEsts(dds, main="Dispersion plot")
 ```
 
 ```{r plot_heatmaps}
-## Regularized log transformation for clustering/heatmaps, etc
+# Regularized log transformation for clustering/heatmaps, etc
 rld <- rlogTransformation(dds)
 plotPCA(rld)
 
@@ -251,7 +251,7 @@ dist(t(assay(rld)))
 as.matrix(dist(t(assay(rld))))
 sampleDists <- as.matrix(dist(t(assay(rld))))
 heatmap(sampleDists)
-## better heatmap with gplots
+# better heatmap with gplots
 library(gplots)
 heatmap.2(sampleDists)
 heatmap.2(sampleDists, col=colorpanel(64, "steelblue", "white"), key=FALSE, trace="none")
@@ -261,13 +261,13 @@ heatmap.2(sampleDists, col=colorpanel(64, "red", "white", "blue"), key=FALSE, tr
 ```
 
 ```{r plot_pval_hist}
-## Examine plot of p-values
+# Examine plot of p-values
 hist(res$pvalue, breaks=50, col="grey")
 ```
 
 
 ```{r MA_plot}
-#These are the plots that are most recognisable from papers
+# These are the plots that are most recognisable from papers
 # MA Plot
 par(pch=16)
 with(res, plot(baseMean, log2FoldChange, pch=20, cex=.5, log="x"))
@@ -280,14 +280,14 @@ with(subset(res, padj<.05), textxy(baseMean, log2FoldChange, labs=Gene, cex=1, c
 
 ```{r volcano_plot}
 # Volcano plot
-## Set point character
+# Set point character
 par(pch=16)
 with(res, plot(log2FoldChange, -log10(pvalue), main="Volcano plot"))
 with(subset(res, padj<.05 ), points(log2FoldChange, -log10(pvalue), col="red"))
 with(subset(res, abs(log2FoldChange)>1), points(log2FoldChange, -log10(pvalue), col="orange"))
 with(subset(res, padj<.05 & abs(log2FoldChange)>1), points(log2FoldChange, -log10(pvalue), col="green"))
-## Add legend
+# Add legend
 legend("topleft", legend=c("FDR<0.05", "|LFC|>1", "both"), pch=16, col=c("red","orange","green"))
-## Label points
+# Label points
 with(subset(res, padj<.05 & abs(log2FoldChange)>1), textxy(log2FoldChange, -log10(pvalue), labs=Gene, cex=1))
 ```
